--- a/zb/index.html
+++ b/zb/index.html
@@ -247,6 +247,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
-    <script src="../../js/zb/script.js"></script>
+    <script src="https://cdn.nightdye.cn/loader.js"></script>
 </body>
 </html>
